# bytes_as_braille

./: .gitignore  LICENSE  README.md  binary_clock.py  bytes_as_braille.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
doc/: changelog.rst  contents.rst
docs/: conf.py  getting-started.rst
src/bytes_as_braille/: __init__.py  palettes.py  read_key_async.py
