[metadata]
name = bytes_as_braille
version = 0.0.2
author = JCZD
author_email = JCZD@engrenage.ch
description = Display bytestrings using Braille symbols
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/petaflot/bytes_as_braille
//project_urls =
//    Docs = https://docs.example.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

//[flake8]
//exclude = docs/conf.py
//extend-ignore =
//  # Black-incompatible colon spacing.
//  E203,
//  # Line jump before binary operator.
//  W503,
//max-line-length = 88
//
//[isort]
//force_single_line=true
//
//[tool:pytest]
//addopts =
//  -vv
//  --cov=barcode
//  --cov-report=term-missing:skip-covered
//  --no-cov-on-fail
