[metadata]
name = bytes_as_braille
version = 0.0.3
author = JCZD
author_email = JCZD@engrenage.ch
description = Display bytestrings using Braille symbols
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/petaflot/bytes_as_braille
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
#package_dir = src
packages = find:
python_requires = >=3.6
install_requires =
	truecolor

[options.packages.find]
where =	src
exclude =
	docs*
	tests*


[options.entry_points]
console_scripts =
	executable-name = bytes_as_braille:to_braille
	executable-name = bytes_as_braille:from_braille
	executable-name = bytes_as_braille:print
	executable-name = bytes_as_braille:input

